# fliemm

./: .gitignore  README.txt
bigtxt/: .gitignore  CMakeLists.txt
bigtxt/inc/: file_utils.h
bigtxt/src/: CMakeLists.txt  file_utils_posix.c  file_utils_win32.c  main.c
generator/: go.mod  main.go
